--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Marias
+title: Jordi Marias
+subtitle: Professional Personal Blog
+
 email: jordimarias@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -60,9 +62,8 @@ plugins:
 
 author:
   name   : "Jordi Marias I Parella"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Studies: Master's and Bachelor's Degree in Telecommunications Engineering
-  Working as: Vehicular Communications Researcher and Software Developer"
+  avatar : "/assets/images/profile.png" #"/assets/images/bio-photo.jpg"
+  bio    : "Telecom Engineer specialized in Networking Systems and AI. Now working as a Mobility Researcher and Software Developer"
   links:
     # - label: "Website"
     #   icon: "fas fa-fw fa-link"
